<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/d_undo"
          android:icon="@drawable/curved_arrow"
          android:title="@string/undo"
          android:showAsAction="always"/>
    <item android:id="@+id/d_color"
          android:icon="@drawable/color"
          android:title="@string/color"
          android:showAsAction="always"/>
    <item android:id="@+id/d_linewidth"
          android:icon="@drawable/width3"
          android:title="@string/linewidth"
          android:showAsAction="never"/>
    <item android:id="@+id/d_takephoto"
          android:icon="@drawable/camera"
          android:title="@string/takephoto"
          android:showAsAction="never"/>
    <item android:id="@+id/d_share"
          android:icon="@drawable/share"
          android:title="@string/share"
          android:showAsAction="never"/>
    <item android:id="@+id/d_newdrawing"
          android:icon="@drawable/newdrawing"
          android:title="@string/new_drawing"
          android:showAsAction="never"/>
    <item android:id="@+id/d_delete"
          android:icon="@drawable/x"
          android:title="@string/delete"
          android:showAsAction="never"/>
    <item android:id="@+id/d_previous"
          android:icon="@drawable/arrow_left"
          android:title="@string/prev"
          android:showAsAction="never"/>
    <item android:id="@+id/d_next"
          android:icon="@drawable/arrow_right"
          android:title="@string/next"
          android:showAsAction="never"/>
    <item android:id="@+id/d_drawmode"
          android:title="@string/cadmode"
          android:showAsAction="never"/>
</menu>